--- a/client/src/components/rightbar/rightbar.css
+++ b/client/src/components/rightbar/rightbar.css
@@ -52,8 +52,8 @@
     margin-bottom: 20px;
 }
 .rightBarFollowingImg{
-    width: 100px;
-    height: 100px;
+    width: 85px;
+    height:85px;
     object-fit: cover;
     border-radius: 5px;
 }
@@ -72,12 +72,24 @@ font-weight: 300;
 display: flex;
 flex-wrap: wrap;
 justify-content: space-between;
+align-items: center;
+width: 70%;
+
 }
 .rightBarFollowing{
 display: flex;
 flex-direction: column;
 margin-bottom: 20px;
 cursor: pointer;
+justify-content: center;
+align-items: center;
+}
+
+.rightBarFollowingName{
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+    
 }
 
 .rightBarFollowButton{
